# gtk

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  aide_widgets.c  architecture.drawio  build.ps1  compile_bg.bat  deploy.ps1  fich.md  installer.iss  interface.txt  issues.md  readme.md  remove_bg_fishes.py  reverse_images.py  run.bat  run.sh  structure.md  todos.md  ui_exemple.txt  ui_exemple.xml  ui_scroll.txt
build-test/: CMakeCache.txt
build-verify/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
controle/: zakariae.c  zakariae2.c  zakariae3.c
data/: bassin.xml  poissons_types.xml  settings.xml
exam/: exam.c
exams/: exam1.c  exam2.c  exam3.c  meriem.c  test.c  zakariae.c  zakariae2.c  zakariae4.c
resources/: Compare Documentation.txt  bassin.css  style.css
resources/sounds/: fishing_game_soundboard.html
resources/videos/: 7fla_ilisiya.ogv  README.txt
src/: assets.c  assets.h  bassin.c  bassin.h  draw.c  draw.h  entities.c  entities.h  example_scroll_design.c  main.c  main2.c  main_fixed.c  main_v3.c  main_xml.c  screen_accueil.c  screen_accueil.h  screen_createur.c  screen_createur.h  screen_jeux.c  screen_jeux.h  sound.c  sound.h  structure.md  test.c  test_buttons.c  test_champ_text.c  test_conteneur.c  test_inputs.c  test_texte.c  xml_runner.c
src/actions/: bassin_interactions.c  bassin_menu.c  bassin_sidebar.c
src/core/: app_runner.c  app_runner.h  sound.c
src/dialogs/: bassin_dialogs.c
src/modele/: poisson.c  poisson.h
src/pages/: screen_bassin.c  screen_bassin.h  screen_bassin_helpers.c  screen_home.c  screen_home.h
src/simulation/: bassin_private.h  bassin_simulation.c  bassin_xml.c
src/tests/: aide_widgets.c  exam.c  runbat.c  test_buttons.c  test_callbacks.c  test_champ_nombre.c  test_champ_text.c  test_conteneur.c  test_demo_widgets.c  test_dialog.c  test_fenetre.c  test_image.c  test_inputs.c  test_menu.c  test_slider.c  test_texte.c
src/ui/: bassin_dialogs.c  bassin_menu.c  bassin_private.h  bassin_sidebar.c  bassin_simulation.c  bassin_xml.c  screen_bassin.c  screen_bassin.h  screen_stubs.c  screen_stubs.h
widgets/headers/: barre_progression.h  bouton.h  bouton_checklist.h  bouton_radio.h  champ_motdepasse.h  champ_nombre.h  champ_select.h  champ_texte.h  champ_zone_texte.h  common.h  conteneur.h  dialog.h  export_xml.h  fenetre.h  image.h  menu.h  separateur.h  slider.h  texte.h  video.h  xml_parser.h
widgets/sources/: barre_progression.c  bouton.c  bouton_checklist.c  bouton_radio.c  button.h.cpp  champ_motdepasse.c  champ_nombre.c  champ_select.c  champ_texte.c  champ_zone_texte.c  common.c  conteneur.c  dialog.c  export_xml.c  fenetre.c  image.c  menu.c  separateur.c  slider.c  texte.c  video.c  xml_parser.c
